Rename banner image, fix spacing on two leaf icon

--- a/css/main.css
+++ b/css/main.css
@@ -37,15 +37,20 @@ html {
 }
 
 .banner {
-  background-image: linear-gradient(to top, rgba(16, 52, 41, .8), transparent), url("../images/leaf-banner.jpg");
-  background-size: cover;
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
+  background-size: 100% 50%, cover;
   border-bottom: 3px solid #588477;
+  background-position: left bottom, center bottom;
+  background-repeat: no-repeat;
+  padding-top: 9rem;
 }
 
 .banner-content {
-  background-image: url("../images/two-leaves.svg")
+  background-image: url("../images/two-leaves.svg");
   background-repeat: no-repeat;
-  padding-top: 40%;
+  background-size: 5rem auto;
+  background-position: .75rem top;
+  padding-top: 6.5rem;
 }
 
 @media only screen and (min-width: 60em) {
